--- a/HLtask1shivi.ipynb
+++ b/HLtask1shivi.ipynb
@@ -2,24 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "Hi,shivi\n",
+      "1\n",
+      "Hi,asha\n",
       "Guess a number\n",
-      "4\n",
-      "U guessed it rightshivi\\it matches the random number\n"
+      "5\n",
+      "Oops numbers didn't match\n"
      ]
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "Write a program that does the following:\n",
+    "a) Stores a random number (1-10) in a variable – see hint below.\n",
+    "b) Asks a user for their name and stores this in a variable.\n",
+    "c) Asks a user to guess the number between 1 and 10.\n",
+    "d) Tells the user whether they have guessed correctly\n",
+    "\n",
+    "\"\"\"\n",
     "\n",
     "import random\n",
+    "\n",
     "#Stores a random number \n",
     "rnumber = random.randint(1,10)\n",
     "print(rnumber)\n",
@@ -35,10 +44,10 @@
     "\n",
     "# validate random number matches with number guessed by user\n",
     "if userNumber==rnumber:\n",
-    "    print(\"U guessed it right\" + userName +  \"it matches the random number\")\n",
+    "    print(\"U guessed it right \" + userName + \" it matches the random number\")\n",
     "\n",
     "else:\n",
-    "    print(\"Oops numbers didnt match\")\n"
+    "    print(\"Oops numbers didn't match\")\n"
    ]
   }
  ],
