--- a/ML-LogisticRegression.ipynb
+++ b/ML-LogisticRegression.ipynb
@@ -492,8 +492,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "ab7988ee",
+   "execution_count": 51,
+   "id": "84ed7def",
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +901,7 @@
        "       [    49,  36000]], dtype=int64)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,8 +912,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "376ce23a",
+   "execution_count": 52,
+   "id": "f40b2763",
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +940,7 @@
        "       1, 1, 0, 1], dtype=int64)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de9b1c58",
+   "id": "3ff5669f",
    "metadata": {},
    "source": [
     "### Splittling the dataset into training data and test data"
@@ -1100,7 +1100,7 @@
     "#verify with confusion matrix\n",
     "\n",
     "#Confusion matrix is a matrix that allows you to visualize the performance of the\n",
-    "#classification machine learning mod\n",
+    "#classification machine learning model\n",
     "\n",
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
